--- a/SharpBCI/Windows/MultiSessionConfigWindow.xaml
+++ b/SharpBCI/Windows/MultiSessionConfigWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SharpBCI.Windows.AutoRunConfigWindow"
+﻿<Window x:Class="SharpBCI.Windows.MultiSessionConfigWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:SharpBCI.Windows"
         xmlns:windows="clr-namespace:SharpBCI.Extensions.Windows;assembly=SharpBCI.Extensions"
         mc:Ignorable="d"
-        Title="Auto Run Configuration" MinWidth="500" Width="500" MinHeight="400" Height="400" Background="{StaticResource BackgroundBrush}" Loaded="Window_OnLoaded" 
-        AllowDrop="True" DragOver="ExperimentListView_OnDragOver" Drop="ExperimentListView_OnDrop" >
+        Title="Multi-Session Configuration" MinWidth="500" Width="500" MinHeight="400" Height="400" Background="{StaticResource BackgroundBrush}" 
+        AllowDrop="True" Loaded="Window_OnLoaded" DragOver="ExperimentListView_OnDragOver" Drop="ExperimentListView_OnDrop" >
     <Window.Resources>
         <local:SessionNameConverter x:Key="SessionNameConverter" />
         <local:ExperimentIdConverter x:Key="ExperimentIdConverter" />
@@ -17,10 +17,10 @@
         <StackPanel DockPanel.Dock="Top" >
             <Menu Background="Transparent">
                 <MenuItem Header="File" >
-                    <MenuItem Header="New Auto-Run Config" Click="NewAutoRunConfigMenuItem_OnClick" />
-                    <MenuItem Header="Open Auto-Run Config" Click="OpenAutoRunConfigMenuItem_OnClick" />
-                    <MenuItem Header="Save Auto-Run Config" Click="SaveAutoRunConfigMenuItem_OnClick" />
-                    <MenuItem Header="Save Auto-Run Config as..." Click="SaveAutoRunConfigAsMenuItem_OnClick" />
+                    <MenuItem Header="New Multi-Session Config" Click="NewMultiSessionConfigMenuItem_OnClick" />
+                    <MenuItem Header="Open Multi-Session Config" Click="OpenMultiSessionConfigMenuItem_OnClick" />
+                    <MenuItem Header="Save Multi-Session Config" Click="SaveMultiSessionConfigMenuItem_OnClick" />
+                    <MenuItem Header="Save Multi-Session Config as..." Click="SaveMultiSessionConfigAsMenuItem_OnClick" />
                     <Separator/>
                     <MenuItem Header="Add Experiment Config" Click="AddExperimentConfigMenuItem_OnClick" />
                     <Separator/>
