--- a/SharpBCI.Extensions/Resources/SharedResourceDictionary.xaml
+++ b/SharpBCI.Extensions/Resources/SharedResourceDictionary.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <SolidColorBrush x:Key="GroupHeaderColorBrush" Color="#66FFFFFF"/>
+    <SolidColorBrush x:Key="SeparatorColorBrush" Color="#FFE4E4E4"/>
     <Style TargetType="Button">
         <Setter Property="Background" Value="#55EAEAEA" />
     </Style>
@@ -9,15 +11,23 @@
     <Style TargetType="ListView">
         <Setter Property="Background" Value="#33FFFFFF" />
     </Style>
+    <Style x:Key="MenuItem" TargetType="MenuItem">
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
     <ImageBrush x:Key="BackgroundBrush" Stretch="Fill" AlignmentX="Left" AlignmentY="Top" TileMode="Tile"
                 ImageSource="pack://application:,,,/SharpBCI.Extensions;component/Resources/BackgroundPattern.png" 
                 Viewport="0,0,120,96" ViewportUnits="Absolute" />
-    <Style x:Key="ParamGroupSeparator" TargetType="Rectangle">
+    <Style x:Key="ParamGroupHeader" TargetType="Grid">
+        <Setter Property="Height" Value="15"/>
+        <Setter Property="Background" Value="{StaticResource GroupHeaderColorBrush}"/>
+    </Style>
+    <Style x:Key="ParamGroupHeaderLine" TargetType="Rectangle">
         <Setter Property="Fill" Value="#FFE4E4E4" />
         <Setter Property="VerticalAlignment" Value="Top" />
         <Setter Property="Height" Value="1"/>
     </Style>
-    <Style x:Key="ParamGroupHeader" TargetType="TextBlock">
+    <Style x:Key="ParamGroupHeaderText" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Top" />
         <Setter Property="TextWrapping" Value="Wrap"/>
@@ -30,9 +40,5 @@
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="TextWrapping" Value="Wrap"/>
-    </Style>
-    <Style x:Key="MenuItem" TargetType="MenuItem">
-        <Setter Property="HorizontalContentAlignment" Value="Left"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
