--- a/SharpBCI.Extensions/Devices/MarkerSources/MarkerDisplayWindow.xaml
+++ b/SharpBCI.Extensions/Devices/MarkerSources/MarkerDisplayWindow.xaml
@@ -1,10 +1,9 @@
-﻿<Window x:Class="SharpBCI.Extensions.Windows.MarkDisplayWindow"
+﻿<Window x:Class="SharpBCI.Extensions.Devices.MarkerSources.MarkerDisplayWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SharpBCI.Extensions.Windows"
-        mc:Ignorable="d"
+        mc:Ignorable="d" x:ClassModifier="internal"
         Title="Mark Display" Height="500" Width="600" >
     <Grid>
         <ListView x:Name="MarkListView">
