--- a/SharpBCI/Windows/AnalysisWindow.xaml
+++ b/SharpBCI/Windows/AnalysisWindow.xaml
@@ -70,7 +70,7 @@
 
                 <StackPanel Orientation="Vertical" Grid.Row="0" Margin="0 0 0 5">
                     <TextBlock Text="Select Module" Margin="0 0 0 3"/>
-                    <ComboBox x:Name="MarkerPluginComboBox" SelectionChanged="PluginComboBox_OnSelectionChanged" />
+                    <ComboBox x:Name="ModulePluginComboBox" SelectionChanged="ModuleComboBox_OnSelectionChanged" />
                 </StackPanel>
 
                 <ListView x:Name="MarkerRecordListView" Grid.Row="1" Margin="0 0 0 5">
