--- a/SharpBCI/Windows/DeviceConfigWindow.xaml
+++ b/SharpBCI/Windows/DeviceConfigWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:windows="clr-namespace:SharpBCI.Extensions.Windows;assembly=SharpBCI.Extensions"
         xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d" 
         Title="" Height="160" Width="300" Background="{StaticResource BackgroundBrush}" 
@@ -28,14 +27,9 @@
                 <system:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">10</system:Double>
             </ScrollViewer.Resources>
             <StackPanel x:Name="StackPanel">
-
-                <windows:ParameterPanel x:Name="DeviceConfigurationPanel" Margin="0 18 0 0" 
-                                        LayoutChanged="ConfigurationPanel_OnLayoutChanged" ContextChanged="ConfigurationPanel_OnContextChanged" />
-
-                <StackPanel x:Name="ConsumersStackPanel" />
-
+                <StackPanel x:Name="DeviceConfigContainer" Margin="0 12 0 0" />
+                <StackPanel x:Name="ConsumersStackPanel" Margin="0 8 0 0" />
                 <Button Content="+" FontSize="14" Margin="5 5 5 5" Click="AddConsumerButton_OnClick"/>
-
             </StackPanel>
         </ScrollViewer>
     </DockPanel>
