--- a/SharpBCI/Windows/DeviceConfigWindow.xaml
+++ b/SharpBCI/Windows/DeviceConfigWindow.xaml
@@ -3,13 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d" 
-        Title="" Height="160" Width="300" Background="{StaticResource BackgroundBrush}" 
-        LayoutUpdated="Window_LayoutUpdated" KeyDown="Window_KeyDown" >
-    <DockPanel>
+        Title="" Height="160" Width="300" Background="{StaticResource BackgroundBrush}"
+        Loaded="Window_OnLoaded" LayoutUpdated="Window_OnLayoutUpdated" KeyDown="Window_OnKeyDown" >
+    <DockPanel x:Name="DockPanel">
         <Grid DockPanel.Dock="Bottom" x:Name="ActionPanel" VerticalAlignment="Top" >
-            <Button x:Name="OkBtn" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10" Width="120" Height="56" Click="OkBtn_Click">
+            <Button x:Name="OkBtn" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10" Width="120" Height="56" Click="OkBtn_OnClick">
                 <Button.ContentTemplate>
                     <ItemContainerTemplate>
                         <StackPanel>
@@ -21,16 +20,5 @@
             </Button>
         </Grid>
 
-        <ScrollViewer x:Name="ScrollView" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-            <ScrollViewer.Resources>
-                <!-- ReSharper disable once Xaml.RedundantResource -->
-                <system:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">10</system:Double>
-            </ScrollViewer.Resources>
-            <StackPanel x:Name="StackPanel">
-                <StackPanel x:Name="DeviceConfigContainer" Margin="0 12 0 0" />
-                <StackPanel x:Name="ConsumersStackPanel" Margin="0 8 0 0" />
-                <Button Content="+" FontSize="14" Margin="5 5 5 5" Click="AddConsumerButton_OnClick"/>
-            </StackPanel>
-        </ScrollViewer>
     </DockPanel>
 </Window>
