--- a/SharpBCI/Windows/MultiSessionLauncherWindow.xaml
+++ b/SharpBCI/Windows/MultiSessionLauncherWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SharpBCI.Windows.MultiSessionConfigWindow"
+﻿<Window x:Class="SharpBCI.Windows.MultiSessionLauncherWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SharpBCI.Windows"
         xmlns:windows="clr-namespace:SharpBCI.Extensions.Windows;assembly=SharpBCI.Extensions"
         mc:Ignorable="d"
-        Title="Multi-Session Configuration" MinWidth="500" Width="500" MinHeight="400" Height="400" Background="{StaticResource BackgroundBrush}" 
+        Title="SharpBCI Multi-Session Launcher" MinWidth="500" Width="500" MinHeight="400" Height="400" Background="{StaticResource BackgroundBrush}" 
         AllowDrop="True" Loaded="Window_OnLoaded" DragOver="SessionListView_OnDragOver" Drop="SessionListView_OnDrop" >
     <DockPanel Margin="5" >
 
