--- a/SharpBCI.Extensions/Resources/SharedResourceDictionary.xaml
+++ b/SharpBCI.Extensions/Resources/SharedResourceDictionary.xaml
@@ -1,9 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="GroupHeaderColorBrush" Color="#66FFFFFF"/>
-    <SolidColorBrush x:Key="SeparatorColorBrush" Color="#FFE4E4E4"/>
+    <SolidColorBrush x:Key="GroupHeaderBackgroundBrush" Color="#66FFFFFF"/>
+    <SolidColorBrush x:Key="SeparatorFillBrush" Color="#FFE4E4E4"/>
     <SolidColorBrush x:Key="DarkSeparatorColorBrush" Color="#FFA4A4A4"/>
     <SolidColorBrush x:Key="LightSeparatorColorBrush" Color="#FFEFEFEF"/>
+    <ImageBrush x:Key="BackgroundBrush" Stretch="Fill" AlignmentX="Left" AlignmentY="Top" TileMode="Tile"
+                ImageSource="pack://application:,,,/SharpBCI.Extensions;component/Resources/BackgroundPattern.png" 
+                Viewport="0,0,120,96" ViewportUnits="Absolute" />
+    <Style x:Key="HorizontalSeparatorLine" TargetType="Rectangle">
+        <Setter Property="Fill" Value="{StaticResource SeparatorFillBrush}" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Height" Value="1"/>
+    </Style>
     <Style TargetType="Button">
         <Setter Property="Background" Value="#55EAEAEA" />
     </Style>
@@ -16,27 +24,6 @@
     <Style x:Key="MenuItem" TargetType="MenuItem">
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-    </Style>
-    <ImageBrush x:Key="BackgroundBrush" Stretch="Fill" AlignmentX="Left" AlignmentY="Top" TileMode="Tile"
-                ImageSource="pack://application:,,,/SharpBCI.Extensions;component/Resources/BackgroundPattern.png" 
-                Viewport="0,0,120,96" ViewportUnits="Absolute" />
-    <Style x:Key="ParamGroupHeader" TargetType="Grid">
-        <Setter Property="Height" Value="15"/>
-        <Setter Property="Background" Value="{StaticResource GroupHeaderColorBrush}"/>
-    </Style>
-    <Style x:Key="ParamGroupHeaderLine" TargetType="Rectangle">
-        <Setter Property="Fill" Value="{StaticResource SeparatorColorBrush}" />
-        <Setter Property="VerticalAlignment" Value="Top" />
-        <Setter Property="Height" Value="1"/>
-    </Style>
-    <Style x:Key="ParamGroupHeaderText" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Top" />
-        <Setter Property="TextWrapping" Value="Wrap"/>
-        <Setter Property="FontSize" Value="8"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Background" Value="White"/>
-        <Setter Property="Foreground" Value="#FFC3C3C3"/>
     </Style>
     <Style x:Key="LabelText" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
